# ipython-markdown-inspector

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml  tests.yml
binder/: environment.yml  ipython_config.py  postBuild
ipython_markdown_inspector/: __init__.py  _hook_data.py  _ipython_patch.py  formatter.py  models.py
ipython_markdown_inspector/tests/: test_as_markdown.py
